# USBPcapOdinDumper

./: .gitignore  ReadMe.md  pyproject.toml  setup.cfg
USBPcapOdinDumper/: Dumper.py  OdinDumping.py  PcapDumping.py  __main__.py
USBPcapOdinDumper/kaitai/: odin3.py  pcap.py  usbmon.py  usbpcap.py
